tests/should_fail/negative_position_in_ctor.stahl
module main
  main

; Based on https://wiki.portal.chalmers.se/agda/pmwiki.php?n=ReferenceManual.BadInHaskell

defty Bad TYPE
  bad (pi ((_ (pi ((_ Bad)) Bad))) Bad)

def get-fun (pi ((_ Bad)) (pi ((_ Bad)) Bad))
  fn (b)
  	elim-Bad TODO

def omega (pi ((_ Bad)) Bad)
  fn (b)
    ((get-fun b) b)

def loop (omega (bad omega))
